# eng-ai-agents

./: .dockerignore  .env.example  .gitignore  .notebook-target.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose-local.yaml  docker-compose-mac.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup-demo.ipynb  setup-venv.sh
.beads/: config.yaml  dolt-monitor.pid  dolt-server.activity  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.claude/: settings.local.json
.devcontainer/: devcontainer.env  devcontainer.json  docker-compose-local.yaml
.github/: check-collaborators.yml
.github/workflows/: check-collaborators.yml
artagents/: README.md  pyproject.toml
artagents/src/artagents/: __init__.py
assignments/: README.md  mvtec.ipynb  testfile for commit  video_detections.parquet
assignments/assignment-1/: 01-assignment-part-1.ipynb  house_prices_assignment-1.ipynb
assignments/assignment2/: CS370HW2_clean.ipynb  README.md  retrieval_results.parquet
cli/: README.md  pyproject.toml
cli/src/cli/: __init__.py  __main__.py
docker/: Dockerfile.dev.gpu  Dockerfile.dev.pytorch  Dockerfile.gsplat.dev.gpu  Dockerfile.nerfstudio.dev.gpu  Dockerfile.prod.pytorch  Dockerfile.ros.dev.gpu  Dockerfile.ros.dev.mac  Dockerfile.torch.cpu  Dockerfile.torch.dev.cpu  Dockerfile.torch.dev.gpu  Dockerfile.torch.dev.mac  Dockerfile.torch.gpu  Dockerfile.torch.mac.dev  Dockerfile.torch.prod.gpu
docs/: _quarto.yml
notebooks/: EXECUTION_PLAN.md  README.md  notebook-database.yml  original-notebooks-registry.yml  stripped-notebooks.yml
notebooks/CV/mit-foundations/chapter-38-images-and-geometry/: index.ipynb
notebooks/CV/mit-foundations/chapter-42-single-view-metrology/: index.ipynb
notebooks/CV/mit-foundations/chapter-47-3d-motion-projection/: index.ipynb
notebooks/VLM/clip/zero-shot/: clip_zero_shot.ipynb
notebooks/aleatoric-epistemic/: index.ipynb
notebooks/assignments/devenv/: index.ipynb
notebooks/assignments/dim-reduction/: low_rank_gaussians_1.ipynb  low_rank_gaussians_2.ipynb  low_rank_gaussians_graduate.ipynb  low_rank_gaussians_undergrad.ipynb  ruchik_yajnik_rank_gaussians_1.ipynb
notebooks/assignments/mle/: mle-gmm-sgd.ipynb
notebooks/assignments/topics/box-regression/: rcnn_regression_head_assignment.ipynb
notebooks/assignments/topics/camera-calibration/: index.ipynb
notebooks/assignments/topics/cnn-explainers/: index.ipynb
notebooks/blog/tutorials/: hf-coco-streaming.ipynb
notebooks/cnn/: using_convnets_with_small_datasets.ipynb  visualizing-what-convnets-learn.ipynb
notebooks/cnn/resnet-skip-dimensioning-fpn/: index.ipynb
notebooks/cnn/visualizing-what-convnets-learn/: index.ipynb
notebooks/diffusion/brownian-motion/: brownian_motion.ipynb
notebooks/diffusion/ddim/: ddim_mog_tutorial.ipynb
notebooks/diffusion/ddpm/: ddpm_mog_tutorial.ipynb
notebooks/diffusion/score-based/score-mog-example/: score_mog_example.ipynb
notebooks/diffusion/score-based/song-tutorial-notebook/: Tutorial_on_Score_Based_Generative_Modeling.ipynb
notebooks/dim-reduction/pca/: 3d_pca.ipynb  principal_component_analysis.ipynb
notebooks/empirical-risk/: index.ipynb
notebooks/generative-modeling/em-gaussian-mixture/em-example-mog/: em_example_mog.ipynb
notebooks/global-planning/: a-star.ipynb
notebooks/imitation-learning/behavioral-cloning/: behavioral-cloning.ipynb
notebooks/llm/: annotated_transformer.ipynb  lstm_seq2seq.ipynb  nmt-metrics.ipynb  positional_embeddings.ipynb  scaling.ipynb  seq2seq_and_attention.ipynb  simple-rnn-language-model.ipynb  time_series_using_simple_rnn_lstm.ipynb  tokenization.ipynb  word2vec_from_scratch.ipynb  word2vec_tensorflow_tutorial.ipynb
notebooks/mdp/: mdp_intro.ipynb  policy_evaluation.ipynb  policy_iteration_gridworld.ipynb  value_iteration.ipynb  value_iteration_gridworld.ipynb
notebooks/mdp/bellman-optimality-backup/mdp-tree-expansion/: mdp-tree-expansion.ipynb
notebooks/mdp/dynamic-programming-algorithms/value-iteration/: index.ipynb
notebooks/mdp/policy-evaluation/: index.ipynb
notebooks/ml-math/calculus/odes-and-euler/: index-executed.ipynb  index.ipynb
notebooks/ml-math/probability/: gaussians.ipynb
notebooks/ml-math/probability/gaussians/: gaussians.ipynb
notebooks/nlp/finetuning/food-vlm/: food-vlm.ipynb
notebooks/nlp/finetuning/ticket-routing-llm/: 06-hf-model-trainer-skill.ipynb
notebooks/nlp/language-models/cnn-language-model/: index.ipynb
notebooks/nlp/language-models/lstm-language-model/: index.ipynb
notebooks/nlp/language-models/simple-rnn-language-model/: index.ipynb
notebooks/nlp/transformers/: annotated_transformer.ipynb
notebooks/optimization/batch-normalization/: index.ipynb
notebooks/optimization/maximum-likelihood/: conditional_maximum_likelihood.ipynb  marginal_maximum_likelihood.ipynb
notebooks/optimization/optimizers/: index.ipynb
notebooks/optimization/regularization/: index.ipynb
notebooks/optimization/sgd/: index.ipynb
notebooks/optimization/whitening/: corr-cov-matrix.ipynb
notebooks/reasoning/grpo-math-reasoning/: grpo-math-reasoning.ipynb
notebooks/regression/linear-regression/: index.ipynb  sgd_sinusoidal_dataset.ipynb
notebooks/reinforcement-learning/prediction/: td-vs-mc-mrp.ipynb
notebooks/rnn/: time_series_using_simple_rnn_lstm.ipynb
notebooks/rse/: discrete-bayesian-filter.ipynb  one-dimensional-kalman-filters.ipynb
notebooks/scene-understanding/maskrcnn/: detectron_tutorial.ipynb  maskrcnn_torchvision_inference.ipynb
notebooks/task-planning/: up_blocksworld_demo.ipynb
notebooks/transfer-learning/: transfer_learning_tutorial.ipynb
notebooks/velocity-fields/: index-executed.ipynb  index.ipynb
project/: README.md
ros_ws/src/turtlesim_joy/: README.md  package.xml  setup.cfg  setup.py
scripts/: add_artifact_saving.py  execute_all_notebooks.py  execute_notebook.py  extract_artifacts.py  get_notebook_environment.py  list_notebooks.py  sample_and_upload_coco25k.py  update_registry.py  wandb_report.py  wandb_utils.py
(+66 files in other folders)
