[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pantelis Monogioudis", email = "pantelis.monogioudis@aegean.ai" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"cli" = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
